--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "Smartfilter"
   ],
   "dependencies": {
+    "async": "2.0.0",
     "axiom-utils": "*",
     "d3": "4.12.2",
     "easy-zip": "0.0.4",
@@ -30,5 +31,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "description": "This is a node module bundled with Node Package Manager(NPM). It is a javascript and does not require any compilation.",
-  "version": "1.0.7"
+  "version": "1.1.0"
 }
